# tinymorph

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ExceptionGranted.md  INSTALL.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  lect.md  peer_review.md  sup_meet.md  ta_meet.md  team_meet.md
.github/workflows/: build.yml  dependabot-auto-merge.yml  docs.yml  morph-build.yml  pr-preview.yml
crates/morph/: Cargo.toml
crates/morph-config/: Cargo.toml
docs/: README.md  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
docs/content/: .obsidian.vimrc  References.bib  Reflection.md  Scratch.md  _index.md  glossary.md  index.md  play.html
docs/content/.obsidian/: app.json  appearance.json  hotkeys.json
docs/content/Checklists/: Code-Checklist.md  MG-Checklist.md  MIS-Checklist.md  POC-Checklist.md  ProbState-Checklist.md  SRS-Checklist.md  VnV-Checklist.md  Writing-Checklist.md  index.md
docs/content/Design/: MG.md  MIS.md  index.md
docs/content/Design/SoftArchitecture/: MG.md
docs/content/Design/SoftDetailedDes/: MIS.md
docs/content/DevelopmentPlan/: DevelopmentPlan.md  python style.md
docs/content/HazardAnalysis/: HazardAnalysis.md
docs/content/Presentations/: index.md
docs/content/Presentations/D0_ProofOfConceptDemo/: index.md
docs/content/Presentations/D1_Rev0Demo/: index.md
docs/content/Presentations/D2_FinalPresentation/: index.md
docs/content/Presentations/D3_EXPO/: index.md
docs/content/ProblemStatementAndGoals/: ProblemStatement.md
docs/content/ReflectAndTrace/: ReflectAndTrace.md
docs/content/SRS/: SRS.md
docs/content/UserGuide/: UserGuide.md
docs/content/VnVPlan/: VnVPlan.md
docs/content/VnVReport/: VnVReport.md
docs/content/meetings/: 09-26-2024.md  10-03-2024.md  10-05-2024.md  index.md
docs/content/projMngmnt/: Final_Team_Contrib.md  POC_Team_Contrib.md  Rev0_Team_Contrib.md  index.md
docs/quartz/cli/: handlers.js
docs/quartz/components/: Author.tsx  Breadcrumbs.tsx  Comments.tsx  ContentMeta.tsx  Head.tsx  Image.tsx  MinimalFooter.tsx  TagList.tsx  index.ts  renderPage.tsx
docs/quartz/components/scripts/: collapse-header.inline.ts  comments.inline.ts  image.inline.ts  popover.inline.ts  search.inline.ts  util.ts
docs/quartz/components/styles/: author.scss  breadcrumbs.scss  collapseHeader.inline.scss  comments.scss  image.scss  minimal.scss
docs/quartz/plugins/: index.ts
docs/quartz/plugins/emitters/: 404.tsx  folderPage.tsx  tagPage.tsx
docs/quartz/plugins/transformers/: citations.ts  frontmatter.ts  github.ts  index.ts  links.ts  ofm.ts  twitter.ts
docs/quartz/processors/: parse.ts
docs/quartz/styles/: base.scss  custom.scss  fonts.scss  links.scss  variables.scss
docs/quartz/util/: theme.ts
python/asteraceae/: .python-version  README.md  pyproject.toml  requirements.txt  service.py
python/asteraceae/src/asteraceae/: __init__.py  bentofile.yaml  requirements.txt
python/asteraceae/src/asteraceae/bentovllm_openai/: protocol.py  utils.py
python/exo/: LICENSE  README.md  pyproject.toml
python/exo/notebooks/: sae.ipynb  self_explanation.ipynb
python/exo/src/exo/: __init__.py  llama_sae.py  self_explanation.py  variants.py
src/capstone/: __init__.py
