[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinymorph"
version = "0.1.0"
description = "Exploring your writing through a WYSIWYG editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]
exo.workspace = true

[tool.uv.workspace]
members = ["python/*"]
