[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinymorph"
version = "0.1.0"
description = "Feature steering through WYSIWYG editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = ["ruff>=0.6.6"]

[tool.uv.sources]
exo.workspace = true

[tool.uv.workspace]
members = ["python/*"]
