[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinymorph"
version = "0.1.0"
description = "Feature steering through WYSIWYG editor"
keywords = ["sae", "bentoml", "mech interp"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = ["ruff>=0.6.6"]

[tool.uv.sources]
exo.workspace = true

[tool.uv.workspace]
members = ["python/*"]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",    # Mypy is better at this
  "E722",
]
select = [
  "F",
  "D",
  "G",    # flake8-logging-format
  "PERF", # perflint
  "RUF",  # Ruff-specific rules
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  # "E124",
  "E203",
  "E272",
  # "E303",
  # "E304",
  # "E501",
  # "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039", # unnecessary-class-parentheses
]

[tool.ruff.lint.pydocstyle]
convention = "google"
