[project]
name = "asteraceae"
description = "a BentoML-based service to run SAE-intervention"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
dependencies = [
    "accelerate>=0.34.0",
    "bentoml>=1.3.20",
]
dynamic = ["version"]
[project.urls]
Documentation = "https://tinymorph.aarnphm.xyz"
GitHub = "https://github.com/aarnphm/tinymorph"
Twitter = "https://twitter.com/aarnphm_"
Tracker = "https://github.com/aarnphm/tinymorph/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
[tool.hatch.build.hooks.vcs]
version-file = "asteraceae/_version.py"
[tool.hatch.version.raw-options]
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--first-parent",
]
version_scheme = "post-release"
fallback_version = "0.0.0"
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.sdist]
only-include = ["asteraceae"]
[tool.hatch.build.targets.wheel]
packages = ["asteraceae"]

[tool.bentoml.build]
service = "asteraceae.service:Engine"
include = ["asteraceae/service.py"]
[tool.bentoml.build.python]
lock_packages = false
[tool.bentoml.build.docker]
python_version = "3.11"
[[tool.bentoml.build.envs]]
name = "HF_TOKEN"
[[tool.bentoml.build.envs]]
name = "HF_HUB_ENABLE_HF_TRANSFER"
value = "1"
