[project]
name = "asteraceae"
description = "a BentoML service that run a SAEs with vLLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
dependencies = ["bentoml>=1.3.20", "kantoku>=0.18.1", "vllm>=0.7.0"]
version = "0.0.0"
[project.urls]
Documentation = "https://tinymorph.aarnphm.xyz"
GitHub = "https://github.com/aarnphm/tinymorph"
Twitter = "https://twitter.com/aarnphm_"
Tracker = "https://github.com/aarnphm/tinymorph/issues"


[tool.bentoml.build]
service = "service:Engine"
include = ["service.py"]
[tool.bentoml.build.python]
lock_packages = false
[tool.bentoml.build.docker]
python_version = "3.11"
[[tool.bentoml.build.envs]]
name = "HF_TOKEN"

[tool.uv.sources]
exo = { workspace = true }
