[project]
name = "asteraceae"
description = "a BentoML service that run a SAEs with vLLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
dependencies = [
  "bentoml>=1.3.21",
  "flashinfer-python>=0.2.0.post2",
  "kantoku>=0.18.1",
  "openai>=1.61.0",
  "vllm>=0.7.0",
]
version = "0.0.0"
[project.urls]
Website = "https://morph-editor.app"
Documentation = "https://tinymorph.aarnphm.xyz"
GitHub = "https://github.com/aarnphm/morph"
Twitter = "https://twitter.com/aarnphm_"
Tracker = "https://github.com/aarnphm/morph/issues"


[tool.bentoml.build]
service = "service:Engine"
include = ["service.py"]

[tool.uv.sources]
exo = { workspace = true }
